--- a/tables/dataset_cases.tex
+++ b/tables/dataset_cases.tex
@@ -1,6 +1,6 @@
 {\centering
 \begin{tabular}{l|c|c|c|c}
-\textbf{EL Casuistry}  & \textbf{QALD-1} & \textbf{QALD-2} & \textbf{QALD-3} & \textbf{QALD-4} \\
+\textbf{Cases}  & \textbf{QALD-1} & \textbf{QALD-2} & \textbf{QALD-3} & \textbf{QALD-4} \\
 \hspace{2cm}Total      & \textbf{15}     & \textbf{84}     & \textbf{89}     & \textbf{202} \\ \hline \hline
 Identical to DBP uri   & 73.33           & 85.71           & 84.27           & 79.21           \\ \hline
 Missing tokens         &                 & 4.76            & 5.62            & 9.9             \\ \hline
