Finish first draft

--- a/tables/dataset_cases.tex
+++ b/tables/dataset_cases.tex
@@ -1,11 +1,10 @@
 {\centering
 \begin{tabular}{l|c|c|c|c}
-\textbf{Cases}  & \textbf{QALD-1} & \textbf{QALD-2} & \textbf{QALD-3} & \textbf{QALD-4} \\
-\hspace{2cm}Total      & \textbf{15}     & \textbf{84}     & \textbf{89}     & \textbf{202} \\ \hline \hline
-Identical to DBP uri   & 73.33           & 85.71           & 84.27           & 79.21           \\ \hline
-Missing tokens         &                 & 4.76            & 5.62            & 9.9             \\ \hline
-Additional tokens      & 20.0            & 1.19            & 1.12            & 0.5             \\ \hline
-Lexical variation      & 6.67            & 5.95            & 5.62            & 8.42            \\ \hline
-Other                  &                 & 2.38            & 3.37            & 1.98            \\ \hline
+\textbf{Cases}  & \textbf{QALD-1} & \textbf{QALD-2} & \textbf{QALD-3} & \textbf{QALD-4} \\ \hline \hline
+Identical to DBP uri   & \textbf{73.33\%}  & \textbf{85.71\%}  & \textbf{84.27\%}  & \textbf{79.21\%}  \\ \hline
+Missing tokens         &                   & 4.76\%            & 5.62\%            & 9.9\%             \\ \hline
+Additional tokens      & 20.0\%            & 1.19\%            & 1.12\%            & 0.5\%             \\ \hline
+Lexical variation      & 6.67\%            & 5.95\%            & 5.62\%            & 8.42\%            \\ \hline
+Other                  &                   & 2.38\%            & 3.37\%            & 1.98\%            \\ \hline
 \end{tabular}
 }
