--- a/main.tex
+++ b/main.tex
@@ -12,36 +12,42 @@
 
 \addbibresource{./library.bib}
 
-\usepackage{multicol}
-\usepackage{booktabs}
-\usepackage{xcolor}
-\usepackage{times}
-\usepackage{tikz}
-\usepackage{amsmath}
-\usepackage{verbatim}
-\usetikzlibrary{arrows.meta,shapes}
+%% Packages
+  \usepackage{listings}
+  \usepackage{multicol}
+  \usepackage{booktabs}
+  \usepackage{xcolor}
+  \usepackage{times}
+  \usepackage{tikz}
+  \usepackage{amsmath}
+  \usepackage{verbatim}
+  \usetikzlibrary{arrows.meta,shapes}
 
 \usetheme{metropolis}
 
-\title{Benchmarking Entity Linking for Question Answering over Knowledge Graphs}
-\author{\textbf{Guillermo Echegoyen Blanco} \\ \'Alvaro Rodrigo \\ Anselmo Pe\~nas \\ 
-\{gblanco, alvarory, anselmo\} \textbf{at} lsi.uned.es \\ \\
-Universidad Nacional de Educaci\'on a Distancia}
-\institute{
-  \vspace{1cm}
-  \includegraphics[width=1.25cm]{./figures/UNED.jpeg}
-}
-\date{}
-% \date{\the\year}
+%% Settings and new commands
+  \def\mAlertSpace{\vspace{0.5em}}
+  \def\mOrangeItem{\item[\textcolor{mLightBrown}{\textbullet}]}
+  % 36616a
+  \definecolor{feldgrau}{rgb}{0.3, 0.36, 0.33}
+  \newcommand{\mSlideTitle}{{{\color{gray}\secname}} \# \subsecname \hfill {\scriptsize$|$ UNED}}
+  \newcommand{\mShortTitle}{\secname \hfill {\scriptsize$|$ UNED}}
 
-\def\mAlertSpace{\vspace{0.5em}}
-\def\mOrangeItem{\item[\textcolor{mLightBrown}{\textbullet}]}
-\newcommand{\mSlideTitle}{{{\color{gray}\secname}} \# \subsecname}
+  \tikzstyle{every picture}+=[remember picture]
+  \everymath{\displaystyle}
+  \input{json_listing.tex}
+
+%% Preamble
+  \title{Benchmarking Entity Linking for Question Answering over Knowledge Graphs}
+  \author{\textbf{Guillermo Echegoyen Blanco} \\ \'Alvaro Rodrigo \\ Anselmo Pe\~nas \\ 
+    \{gblanco, alvarory, anselmo\} \textbf{at} lsi.uned.es \\ \\
+    NLP \& IR Group \\
+    Universidad Nacional de Educaci\'on a Distancia}
+    \titlegraphic{\hfill\includegraphics[height=0.75cm]{./figures/UNED.jpeg}
+  }
+  \date{}
 
 \begin{document}
-
-\tikzstyle{every picture}+=[remember picture]
-\everymath{\displaystyle}
 
 \maketitle
 
@@ -51,49 +57,25 @@ Universidad Nacional de Educaci\'on a Distancia}
 \end{frame}
 
 \section{Introduction}
-  \begin{frame}{\secname}
+  \begin{frame}{\mShortTitle}
     \begin{alertblock}{Entity Linking}
       \mAlertSpace%
-      \textbf{Def:} Link parts of a Natural Language passage to it's corresponding node in a Knowledge Graph. Usually comprises:
+      \textbf{Def:} Link parts of a Natural Language passage to their corresponding node in a Knowledge Graph. Usually comprises:
       \begin{itemize}
         \item Recognize the entity mention in the text.
         \item Disambiguate the mention.
       \end{itemize}
     \end{alertblock}
     \mAlertSpace
-    \textbf{Q:} List all episodes of the
-      \tikz[baseline]{\node[anchor=base] (classt1){%
-        $\overbrace{\text{first season}}^\text{\scriptsize dbo:seasonNumber = 1}$
-      };}
-    of the HBO \\
-    television 
-      \tikz[baseline]{\node[anchor=base] (classt2){%
-        $\underbrace{\text{series}}_\text{\scriptsize dbo:series}$ 
-      };}
-      \tikz[baseline]{\node[anchor=base] (entityt1){%
-        $\underbrace{\text{The Sopranos}}_\text{\scriptsize dbr:The\_Sopranos}$
-      };}
-    \\
+    \input{examples/q_sopranos.tex}
     \mAlertSpace
-    \begin{tabular}{lr}
-      {\scriptsize
-        \textit{dbo = http://dbpedia.org/ontology}
-      } &
-      \hspace{4cm} 
-      {%
-        \tikz[baseline]{\node[anchor=base] (entityf1) {entity};}
-      } \\
-      {\scriptsize
-        \textit{dbr = http://dbpedia.org/resource}
-      } & {%
-        \tikz[baseline]{\node[anchor=base] (classf1) {class};}
-      } \\
-    \end{tabular}
+    \input{./tables/dbo_dbr.tex}
     \begin{tikzpicture}[overlay]
       \path[-{Latex[width=2mm]}] (classf1.east) edge [bend right=90] (classt1);
       \path[-{Latex[width=2mm]}] (classf1) edge [bend left=15] (classt2);
       \path[-{Latex[width=2mm]}] (entityf1) edge [bend left] (entityt1);
     \end{tikzpicture}
+    \setbeamertemplate{footline}[plain]
   \end{frame}
   \note{%
     \begin{itemize}
@@ -101,45 +83,47 @@ Universidad Nacional de Educaci\'on a Distancia}
     \end{itemize}
   }
 
-  \begin{frame}{\secname}
+  \begin{frame}{\mShortTitle}
     \begin{alertblock}{Motivation}
       \begin{itemize}
-        \item Asses the impact of Entity Linking on a Question Answering task over a KG.
+        \item Lots of QA systems do perform an EL step with good results.
+        \item Is the task easy or datasets are?
+        \item Asses impact of EL Task on QA systems over KG.
         \item Actual collections for QA are easy for Entity Linking.
       \end{itemize}
     \end{alertblock}
+    \mAlertSpace
+    \input{examples/q_sopranos_short.tex}
+    \hfill
+    \tikz[baseline]{\node[anchor=base] (src1){%
+        \textbf{replace " " $\rightarrow$ "\_"}
+    };}
+    \begin{tikzpicture}[overlay]
+      \path[-{Latex[width=2mm]}] (src1.west) edge [bend left] (dst1.south);
+    \end{tikzpicture}
   \end{frame}
   \note{%
     \begin{itemize}
+      \item Lots of systems rely on other tools ToDo := Get some of those tools
       \item It is important because linking to a certain node will restrict the whole search process inside the KG. So it's impact can be decisive.
       \item More about the easyness of each dataset on the experiments section.
     \end{itemize}
   }
 
-\section{Outcomes}
-  \begin{frame}{\secname}
-    \begin{alertblock}{Our main contributions are:}
-      \begin{itemize}
-        \item QA Datasets characterization
-        \item Semi-automatic method to generate EL dataset.
-        \item Release large benchmark dataset and baseline for EL in QA.
-      \end{itemize}
-    \end{alertblock}      
-  \end{frame}
-
-\section{Experiments}
-  \begin{frame}{\secname}
-    \begin{alertblock}{Datasets}
+\section{Benchmark}
+  \begin{frame}{\mShortTitle}
+    \textcolor{mLightBrown}{\textbf{Objective:}} Complex dataset for Entity Linking
+    \begin{alertblock}{Input Datasets}
       \begin{itemize}
         \item QALD \{1-4\} \cite{Unger2014}) $\le$ 200 QA pairs each
         \item LC-QuAD (\cite{trivedi2017lc}) 5K QA pairs
       \end{itemize}
     \end{alertblock}
-    \begin{alertblock}{Example}
-      \mAlertSpace
-      \textbf{Q:} List all episodes of the first season of the HBO television series
-      $\underbrace{\text{The Sopranos}}_\text{\scriptsize dbr:The\_Sopranos}$
-    \end{alertblock}
+    % \begin{alertblock}{Example}
+    %   \mAlertSpace
+    %   \textbf{Q:} List all episodes of the first season of the HBO television series
+    %   $\underbrace{\text{The Sopranos}}_\text{\scriptsize dbr:The\_Sopranos}$
+    % \end{alertblock}
   \end{frame}
   \note{%
     \begin{itemize}
@@ -147,9 +131,15 @@ Universidad Nacional de Educaci\'on a Distancia}
     \end{itemize}
   }
 
+  \begin{frame}[fragile]{\mShortTitle}
+    \begin{alertblock}{Example}
+      \input{examples/input_dataset.tex}
+    \end{alertblock}
+  \end{frame}
+
 \subsection{Characterization}
   \begin{frame}{\mSlideTitle}
-    \begin{alertblock}{Difficulty}
+    \begin{alertblock}{Difficulty?}
       \begin{itemize}
         \item Given the Question, how easy is the Entity Linking?
       \end{itemize}
@@ -164,14 +154,13 @@ Universidad Nacional de Educaci\'on a Distancia}
 
 \subsection{Automatic Generation}
   \begin{frame}{\mSlideTitle}
-    \textcolor{mLightBrown}{\textbf{Objective:}} Complex dataset for Entity Linking
     \begin{alertblock}{Strategy}
       \begin{enumerate}
-        \item Develop baseline to detect as much mentions as possible
-        \item Remove items from collection
+        \item Develop method to detect easy mentions
+        \item Remove easy mentions from collection
       \end{enumerate}
     \end{alertblock}
-    \begin{alertblock}{Baselines}
+    \begin{alertblock}{Methods}
       \begin{itemize}
         \item Trigram based mention detection
         \item Distance based mention detection
@@ -187,16 +176,15 @@ Universidad Nacional de Educaci\'on a Distancia}
   }
 
 \section{Results}
-\subsection{Dataset Release}
-  \begin{frame}{\mSlideTitle}
+  \begin{frame}{\mShortTitle}
+    Developed method removed between 50\% and 70\% of each dataset.
+    \mAlertSpace
     \begin{alertblock}{Released Datasets}
       \begin{itemize}
         \item \textbf{QALD-\{1-4\}-EL}: QALD-X version for EL $\le 45$ samples each.
         \item \textbf{LC-QuAD-EL}: LC-QuAD version for EL $\le 1.3K$ samples.
-        \item \textbf{C-EL4QA}: Compilation of EL versions $\le 1.5K$ samples.
+        \item \textbf{C-EL4QA}: Complex compilation of EL versions $\le 1.5K$ samples.
       \end{itemize}
-      \mAlertSpace
-      Baseline removed 70\% of the dataset in the worst case!
     \end{alertblock}
   \end{frame}
   \note{%
@@ -207,12 +195,34 @@ Universidad Nacional de Educaci\'on a Distancia}
     Obviously this happens because the questions are automatically generated.
   }
 
-\section{Discussion}
-  \begin{frame}{\secname}
+\section{Outcomes}
+  \begin{frame}{\mShortTitle}
+    \begin{alertblock}{Our main contributions are:}
+      \begin{itemize}
+        \item QA Datasets characterization
+        \item Semi-automatic method to generate EL dataset.
+        \item Release large benchmark dataset and baseline for EL in QA.
+      \end{itemize}
+    \end{alertblock}      
+  \end{frame}
+  \note{%
+    \begin{itemize}
+      \item Method serves also a baseline to test other systems
+    \end{itemize}
+  }
+
+\section{Conclusions \& Future Work}
+  \begin{frame}{\mShortTitle}
+    \begin{alertblock}{Conclusions}
+      \begin{itemize}
+        \item We found QA collections to be very easy
+        \item QA Systems go for automated solutions
+      \end{itemize}
+    \end{alertblock}
     \begin{alertblock}{Research Questions}
       \begin{itemize}
         \item If Entity Linking were more difficult, how QA system would perform?
-        \item Datasets should be created more carefully.
+        \item How can we create more difficult Entity Linking collections?
       \end{itemize}
     \end{alertblock}
   \end{frame}
@@ -223,6 +233,7 @@ Universidad Nacional de Educaci\'on a Distancia}
   }
 
   \begin{frame}[standout]
+    Thank you!\\
     Questions?
   \end{frame}
   \note{%
@@ -233,8 +244,8 @@ Universidad Nacional de Educaci\'on a Distancia}
   }
 
 \section{References}
-\begin{frame}[allowframebreaks]{References}
-  \printbibliography%
-\end{frame}
+  \begin{frame}[allowframebreaks]{References}
+    \printbibliography%
+  \end{frame}
 
 \end{document}
