--- a/tables/dataset_cases.tex
+++ b/tables/dataset_cases.tex
@@ -1,10 +1,12 @@
 {\centering
 \begin{tabular}{l|c|c|c|c}
 \textbf{Cases}  & \textbf{QALD-1} & \textbf{QALD-2} & \textbf{QALD-3} & \textbf{QALD-4} \\ \hline \hline
-Identical to DBP uri   & \textbf{73.33\%}  & \textbf{85.71\%}  & \textbf{84.27\%}  & \textbf{79.21\%}  \\ \hline
-Missing tokens         &                   & 4.76\%            & 5.62\%            & 9.9\%             \\ \hline
-Additional tokens      & 20.0\%            & 1.19\%            & 1.12\%            & 0.5\%             \\ \hline
-Lexical variation      & 6.67\%            & 5.95\%            & 5.62\%            & 8.42\%            \\ \hline
-Other                  &                   & 2.38\%            & 3.37\%            & 1.98\%            \\ \hline
+Identical to DBP uri   & \textbf{92.0\%}  & \textbf{72.0\%}  & \textbf{75.0\%}  & \textbf{80.0\%}  \\ \hline
+Missing tokens         &                  & 4.0\%            & 5.0\%            & 10.0\%           \\ \hline
+Additional tokens      & 6.0\%            & 1.0\%            & 1.0\%            & 0.5\%            \\ \hline
+Lexical variation      & 2.0\%            & 5.0\%            & 5.0\%            & 8.5\%            \\ \hline
+Other                  &                  & 18.0\%           & 14.0\%           & 1.0\%            \\ \hline \hline
+Distance method        & 92.0\%           & 80.0\%           & 83.0\%           & 89.5\%           \\ \hline
+Trigram method         & 92.0\%           & 84.0\%           & 86.0\%           & 94.5\%           \\ \hline
 \end{tabular}
 }
