--- a/tables/composed_datasets_details.tex
+++ b/tables/composed_datasets_details.tex
@@ -2,7 +2,7 @@
   \centering
   \begin{tabular}{|c|r|r|r|}
     \hline\rule{-2pt}{15pt}
-    \textbf{Dataset} & \textbf{U. Q.} & \textbf{U. E.} & \textbf{Total} \\
+    \textbf{Dataset} & \textbf{Unique Q.} & \textbf{Unique E.} & \textbf{Total} \\
     \hline\rule{-4pt}{10pt}
     QALD-1-EL & 3 & 3 & 4 \\ \hline
     QALD-2-EL & 11 & 11 & 12 \\ \hline
