--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,7 @@
 \documentclass[]{beamer}
 \usepackage{pgfpages}
 
-\setbeameroption{show notes on second screen}
+% \setbeameroption{show notes on second screen}
 
 % Include any extra LaTeX packages required
 \usepackage[
